--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #e3a3a3;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -22,14 +22,17 @@ html {
 }
 
 .player {
-  max-width: 480px;
-  min-height: 100vh;
+  max-width: 393px;
   padding: 16px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   position: relative;
   background: #fff;
+  height: 852px;
+  border: 10px solid;
+  border-radius: 55px;
+  transform: translateY(50px);
 }
 
 .player .icon-pause {
@@ -183,6 +186,7 @@ header h4 {
   bottom: 0;
   background: #ccc;
   transition: all 0.3s linear;
+  border-radius: 45px;
 }
 
 .playlist > ion-icon {
